# backend

./: .dockerignore  .env.docker  .env.template  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_09_2234-bae2b0d12475_create_users_table.py  2026_06_19_1552-a0414a97a907_create_users_samples_and_jobs_tables.py  2026_06_22_0314-86fab490f8f5_create_initial_models.py  2026_06_22_1446-dce39bbe7483_create_initial_models.py  2026_07_08_2347-f7f8002f0734_create_initial_database_schema.py  2026_07_11_1900-704e96f09d22_add_additional_info_to_jobtask.py
app/: lifespan.py  main.py
app/api/: __init__.py  health.py
app/auth/: dependencies.py  permissions.py  roles.py  schemas.py
app/core/: __init__.py  config.py  constants.py  logger.py  security.py
app/crud/: __init__.py  job.py  job_task.py  sample.py  user.py  user_sample.py  user_sample_job.py
app/db/: __init__.py  db_helper.py  postgres.py  redis.py  redis_helper.py  s3.py  s3_client.py
app/dependencies/: __init__.py  crud.py  database.py  job_launcher.py  redis.py  s3.py  services.py  worker_auth.py
app/enums/: __init__.py  status.py  task_type.py
app/exceptions/: __init__.py  custom.py  handlers.py
app/models/: __init__.py  base.py  job.py  job_task.py  sample.py  user.py  user_sample.py  user_sample_job.py
app/protocols/: __init__.py  job.py  sample.py  user.py
app/schemas/: __init__.py  job.py  sample.py  user.py
app/services/: __init__.py  (+7 more)
tests/: conftest.py
(+22 files in other folders)
