[tool.poetry]
name = "fastapi-jwt-auth"
version = "0.1.0"
description = "JWT authentication service built with FastAPI, PostgreSQL, and Redis."
authors = ["Rushan Shafeev <shafeev.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.136.1"
uvicorn = { extras = ["standard"], version = "^0.46.0" }
python-multipart = "^0.0.27"
pydantic = { extras = ["email"], version = "^2.13.3" }
pydantic-settings = "^2.14.0"
python-dotenv = "^1.2.2"
pyjwt = "^2.12.1"
passlib = { extras = ["argon2"], version = "^1.7.4" }
slowapi = "^0.1.9"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
redis = "^7.4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
fakeredis = "^2.35.1"
httpx = "^0.28.1"
ruff = "^0.15.16"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

fixable = ["ALL"]
ignore = []

[tool.mypy]
python_version = "3.12"

warn_return_any = true
warn_unused_configs = true

check_untyped_defs = true

ignore_missing_imports = true